--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
 flask==2.3.2
 pandas==2.0.3
-numpy==1.24.3  # Versão compatível com pandas 2.0.3
+numpy==1.24.3
 openpyxl==3.1.2
 xlrd==2.0.1
-pillow==10.0.0
 gunicorn==20.1.0
 flask-cors==4.0.0
+python-dotenv==1.0.0
+loguru==0.7.0
+pydantic==2.0.3
+orjson==3.9.5
+flask-talisman==1.0.0
